--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,16 @@ header img{
    width: 100px;
    margin-top: 30px;
    margin-bottom: 10px;
+   margin-left: 5px;
 }
 
 
 
 /* stile main */
+main{
+    width: 67%;
+    margin-left: 5px;
+}
 
    
 h4{
@@ -36,9 +41,14 @@ h4{
 h4 span{
     color: rgb(72, 166, 225);
 }
-p{
+#prima_sezione p{
  font-style: italic;
  font-size: 10px;
+ margin-bottom: 10px;
+}
+
+.paragrafo span{
+    background-color: yellow;
 }
 
 
