conclusa terza sezione

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ main{
     margin-left: 5px;
 }
 
+/* stile prima sezione */
    
 h4{
    font-size: 10px;
@@ -46,10 +47,41 @@ h4 span{
  font-size: 10px;
  margin-bottom: 10px;
 }
+ 
+/* stile seconda sezione */
 
+.paragrafo{
+    margin-top: 20px;
+}
 .paragrafo span{
+    
     background-color: yellow;
 }
+
+ul{
+    margin-left: 14px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+/* terza sezione */
+table{
+    margin-top: 20px;
+    border-collapse: collapse;
+    text-align: left;
+}
+
+   th{
+   background-color:rgb(72, 166, 225) ;
+   }
+
+ .terza_colonna{
+    width: 50%;
+ }
+ .riga_celeste{
+    background-color: lightskyblue;
+
+ }
 
 
 /* stile footer */
